--- a/qnm_model.ipynb
+++ b/qnm_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "36afa9e6",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "b77f3f38",
    "metadata": {},
    "outputs": [
@@ -158,6 +158,7 @@
      "output_type": "stream",
      "text": [
       "Downloading data for SXS:BBH:0305...\n",
+      "Loading SXS simulations using latest tag 'v3.0.0', published at 2025-05-14T18:17:30Z.\n",
       "Download complete.\n",
       "Rotating waveform to remnant frame...\n",
       "Rotation complete.\n",
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "d7fc3403",
    "metadata": {},
    "outputs": [
